--- a/createaccount/minor.html
+++ b/createaccount/minor.html
@@ -22,13 +22,421 @@
     </header>
 
     <div class="container form-wrapper">
-      <form class="create-info-wrapper">
+      <form id="minor-account" class="create-info-wrapper">
         <div class="step step-1 active">
+          <div class="account-toprow form-group mb-4">
+            <div class="row">
+              <div class="col-lg-6">
+                <input
+                  type="email"
+                  placeholder="enter email"
+                  class="form-control"
+                  name="val-email"
+                  id="val-email"
+                />
+              </div>
+              <div class="col-lg-6">
+                <input
+                  class="form-control"
+                  type="password"
+                  name="val-password"
+                  id="val-password"
+                  placeholder="password"
+                />
+              </div>
+              <button class="btn val-btn col-lg-4">Validate</button>
+            </div>
+          </div>
+          <div class="page page1">
+            <h3>Personal data</h3>
+            <div class="field-wrapper row row-1">
+              <div class="form-group col-lg-3">
+                <select
+                  class="form-control col-lg-3"
+                  aria-label="Default select title"
+                  name="custodianTitle"
+                >
+                  <option selected>select Title</option>
+                  <option value="mr">mr</option>
+                  <option value="mrs">Mrs</option>
+                </select>
+              </div>
+
+              <div class="form-group col-lg-3"></div>
+              <div class="form-group col-lg-6">
+                <input
+                  type="text"
+                  class="form-control"
+                  id="cosFullName"
+                  name="custodianFullName"
+                  placeholder="Custodian or Full Trust Name"
+                />
+              </div>
+            </div>
+            <!-- row 1 end -->
+            <div class="field-wrapper row row-2">
+              <!-- this is used to help with the placement of fields -->
+              <div class="form-group col-lg-3">
+                <select
+                  class="form-control col-lg-3"
+                  aria-label="Default select title"
+                  name="titleOfMinorInvestor"
+                >
+                  <option selected>select Title</option>
+                  <option value="master">master</option>
+                  <option value="miss">miss</option>
+                </select>
+              </div>
+
+              <div class="form-group col-lg-3"></div>
+              <div class="form-group col-lg-6">
+                <input
+                  type="text"
+                  class="form-control"
+                  id="minorInvestorName"
+                  name="minorInvestorName"
+                  placeholder="Name of Minor Investor(s)"
+                />
+              </div>
+            </div>
+            <!-- row-2 end -->
+            <div class="field-wrapper row row-3">
+              <!-- this is used to help with the placement of fields -->
+
+              <div class="col-lg-6 form-group">
+                <label for="exampleInputPassword1" class="form-label"
+                  >Date of birth</label
+                >
+                <input
+                  id="dob"
+                  name="dateOfBirth"
+                  class="form-control"
+                  type="date"
+                />
+              </div>
+
+              <div class="col-lg-6">
+                <select
+                  class="form-control mt-4"
+                  id="sor"
+                  name="stateOfOrigin"
+                  aria-label="Default select title"
+                >
+                  <option selected>state of origin</option>
+                  <option value="Abia">Abia</option>
+                  <option value="Adamawa">Adamawa</option>
+                  <option value="Akwa Ibom">Akwa Ibom</option>
+                  <option value="Anambra">Anambra</option>
+                  <option value="Bauchi">Bauchi</option>
+                  <option value="Benue">Benue</option>
+                  <option value="Borno">Borno</option>
+                  <option value="Cross River">Cross River</option>
+                  <option value="Delta">Delta</option>
+                  <option value="Ebonyi">Ebonyi</option>
+                  <option value="Edo">Edo</option>
+                  <option value="Ekiti">Ekiti</option>
+                  <option value="Enugu">Enugu</option>
+                  <option value="fct">Fct</option>
+                  <option value="Gombe">Gombe</option>
+                  <option value="Imo">Imo</option>
+                  <option value="Jigawa">Jigawa</option>
+                  <option value="Kaduna">Kaduna</option>
+                  <option value="Kano">Kano</option>
+                  <option value="Katsina">Katsina</option>
+                  <option value="Kebbi">Kebbi</option>
+                  <option value="Kogi">Kogi</option>
+                  <option value="Kwara">Kwara</option>
+                  <option value="Lagos">Lagos</option>
+                  <option value="Nasarawa">Nasarawa</option>
+                  <option value="Niger">Niger</option>
+                  <option value="Ogun">Ogun</option>
+                  <option value="Ondo">Ondo</option>
+                  <option value="Osun">Osun</option>
+                  <option value="Oyo">Oyo</option>
+                  <option value="Plateau">Plateau</option>
+                  <option value="Rivers">Rivers</option>
+                  <option value="Sokoto">Sokoto</option>
+                  <option value="Taraba">Taraba</option>
+                  <option value="Yobe">Yobe</option>
+                  <option value="Zamfara">Zamfara</option>
+                  <option value="Kebbi">Kebbi</option>
+                </select>
+              </div>
+            </div>
+            <!-- row 3 ends here -->
+            <div class="field-wrapper row row-4">
+              <!-- this is used to help with the placement of fields -->
+
+              <div class="form-group col-lg-6">
+                <input
+                  type="text"
+                  id="localGovernment"
+                  class="form-control"
+                  name="localGovernment"
+                  placeholder="Local government"
+                />
+              </div>
+              <div class="form-group col-lg-6">
+                <select
+                  class="form-control"
+                  id="nationality"
+                  name="nationality"
+                  aria-label="Default select nationality"
+                >
+                  <option selected>nationality</option>
+                  <option value="Nigeria">nigeria</option>
+                  <option value="Ghana">ghana</option>
+                </select>
+              </div>
+            </div>
+            <!-- row 4 ends here  -->
+            <div class="field-wrapper row row-5">
+              <!-- this is used to help with the placement of fields -->
+
+              <div class="form-group col-lg-6">
+                <input
+                  type="text"
+                  id="idNumber"
+                  class="form-control"
+                  name="idNumber"
+                  placeholder="International Passport or Driver’s License No"
+                />
+              </div>
+              <div class="form-group col-lg-6"></div>
+            </div>
+            <!-- row 5 ends here  -->
+            <div class="field-wrapper row row-6">
+              <!-- this is used to help with the placement of fields -->
+
+              <div class="col-lg-3 form-group">
+                <label for="" class="form-label">issue date</label>
+                <input
+                  id="id-Date"
+                  name="idIssueDate"
+                  class="form-control"
+                  type="date"
+                />
+              </div>
+              <div class="col-lg-3 form-group">
+                <label for="" class="form-label">Expiration Date</label>
+                <input
+                  id="expirationDate"
+                  name="expirationDate"
+                  class="form-control"
+                  type="date"
+                />
+              </div>
+              <div class="col-lg-6"></div>
+            </div>
+            <!-- row-6 end -->
+            <div class="field-wrapper row row-7">
+              <!-- this is used to help with the placement of fields -->
+              <div class="col-lg-12">
+                <input
+                  id="rAddress"
+                  class="form-control"
+                  type="text"
+                  name="residentialAddress"
+                  placeholder="residential address"
+                />
+              </div>
+            </div>
+            <!-- row-7 end -->
+            <div class="field-wrapper row row-8">
+              <!-- this is used to help with the placement of fields -->
+              <div class="col-lg-6 d-flex">
+                <div class="form-group col-lg-6">
+                  <input
+                    id="home-tel"
+                    name="homeTel"
+                    placeholder="Home Tel"
+                    type="tel"
+                    class="form-control"
+                  />
+                </div>
+                <div class="form-group col-lg-6">
+                  <input
+                    id="businessNumber"
+                    name="businessNumber"
+                    placeholder="Business Number"
+                    type="tel"
+                    class="form-control"
+                  />
+                </div>
+              </div>
+              <div class="col-lg-6 d-flex">
+                <div class="form-group col-lg-6">
+                  <input
+                    id="mobile-tel"
+                    name="mobileTel"
+                    placeholder="mobile number "
+                    type="tel"
+                    class="form-control"
+                  />
+                </div>
+                <div class="form-group col-lg-6">
+                  <input
+                    id="fax"
+                    name="fax"
+                    placeholder="fax"
+                    type="text"
+                    class="form-control"
+                  />
+                </div>
+              </div>
+            </div>
+            <!-- row-8 end -->
+            <div class="field-wrapper row row-9">
+              <!-- this is used to help with the placement of fields -->
+              <div class="col-lg-6">
+                <input
+                  id="email"
+                  name="email"
+                  class="form-control"
+                  type="email"
+                  placeholder="email"
+                />
+              </div>
+              <div class="col-lg-6">
+                <input
+                  id="address"
+                  name="mailingAddress"
+                  class="form-control"
+                  type="text"
+                  placeholder="Mailing Address
+                  "
+                />
+              </div>
+            </div>
+            <!-- row-9 end -->
+            <div class="field-wrapper row row-10">
+              <!-- this is used to help with the placement of fields -->
+              <div class="col-lg-12">
+                <input
+                  id="soi"
+                  name="sourceOfIncome"
+                  class="form-control"
+                  type="text"
+                  placeholder="Source of Income:
+                  "
+                />
+              </div>
+            </div>
+            <!-- row-10 end -->
+            <div class="field-wrapper row row-11">
+              <!-- this is used to help with the placement of fields -->
+              <div class="col-lg-12">
+                <input
+                  id="maidian"
+                  name="motherMaidianName"
+                  class="form-control"
+                  type="text"
+                  placeholder="Mother’s Maiden Name (Surname)
+                  "
+                />
+              </div>
+            </div>
+            <!-- row-11 end -->
+            <div class="field-wrapper row row-12">
+              <!-- this is used to help with the placement of fields -->
+              <div class="col-lg-12">
+                <input
+                  id="investment"
+                  name="initialInvestment"
+                  class="form-control"
+                  type="number"
+                  placeholder="Initial Investment: (Cheques/Certificates)"
+                />
+              </div>
+            </div>
+            <!-- row-12 end -->
+          </div>
           <!-- below div ends step-1 -->
           <div class="row mulstep-btn-cont">
-            <!-- <div class="btn btn-left btn-prev">Previous</div> -->
-            <div class="btn btn-danger btn-right btn-submit">Submit</div>
+            <div class="btn btn-danger btn-right btn-next">Next</div>
           </div>
+        </div>
+
+        <div class="step step-2">
+          <h3>
+            CURRENT ACCOUNT BANK DETAILS (Your Bank Account Name Details should
+            correspond with CSCS Account Name)
+          </h3>
+          <div class="field-wrapper row row-13">
+            <!-- this is used to help with the placement of fields -->
+            <div class="form-group col-lg-6">
+              <input
+                id="bankname"
+                name="bankname"
+                class="form-control"
+                type="text"
+                placeholder="Bank name"
+              />
+            </div>
+
+            <div class="form-group col-lg-6">
+              <input
+                id="bankBranch"
+                name="bankBranch"
+                class="form-control"
+                type="text"
+                placeholder="Bank Branch"
+              />
+            </div>
+          </div>
+          <!-- row 13 ends  -->
+          <div class="field-wrapper row row-14">
+            <!-- this is used to help with the placement of fields -->
+            <div class="form-group col-lg-6">
+              <input
+                id="accountName"
+                name="accountName"
+                class="form-control"
+                type="text"
+                placeholder="Account Name"
+              />
+            </div>
+
+            <div class="form-group col-lg-6">
+              <input
+                id="accountNumber"
+                name="accountNumber"
+                class="form-control"
+                type="number"
+                placeholder="Account Number"
+              />
+            </div>
+          </div>
+          <!-- row 14 ends  -->
+          <div class="field-wrapper row row-15">
+            <!-- this is used to help with the placement of fields -->
+            <div class="form-group col-lg-6">
+              <input
+                id="bankAccountOpeningDate"
+                name="bankAccountOpeningDate"
+                class="form-control"
+                type="text"
+                placeholder="Bank Account Opening Date:"
+              />
+            </div>
+
+            <div class="form-group col-lg-6">
+              <input
+                id="bvn"
+                name="bvn"
+                class="form-control"
+                type="text"
+                placeholder="BVN"
+              />
+            </div>
+            <!-- row 15 ends  -->
+            <div class="row mulstep-btn-cont">
+              <div class="btn btn-left btn-prev">Previous</div>
+              <div id="submit-btn" class="btn btn-danger btn-right">submit</div>
+            </div>
+          </div>
+
+          <!-- below div ends step-2 -->
         </div>
       </form>
     </div>
@@ -39,5 +447,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="./account.js"></script>
+    <script src="./bundle.js"></script>
   </body>
 </html>
