mailing list created

--- a/createaccount/minor.html
+++ b/createaccount/minor.html
@@ -431,8 +431,14 @@
             </div>
             <!-- row 15 ends  -->
             <div class="row mulstep-btn-cont">
-              <div class="btn btn-left btn-prev">Previous</div>
-              <div id="submit-btn" class="btn btn-danger btn-right">submit</div>
+              <button class="btn btn-left btn-prev">Previous</button>
+              <button
+                id="submit-btn"
+                type="submit"
+                class="btn btn-danger btn-right"
+              >
+                submit
+              </button>
             </div>
           </div>
 
