--- a/createaccount/personal.html
+++ b/createaccount/personal.html
@@ -439,16 +439,21 @@
         <div class="step step-2">
           <div class="field-wrapper row row-16">
             <!-- this is used to help with the placement of fields -->
-            <h1>page 2</h1>
+            <h1>Bio data</h1>
+            <p>
+              please download the form below and email a filled copy to
+              @smatradeng@gmail.com
+            </p>
 
             <div class="row mulstep-btn-cont">
-              <div class="btn btn-left btn-prev">Previous</div>
-              <div
+              <button class="btn btn-left btn-prev">Previous</button>
+              <button
                 class="btn btn-danger btn-right btn-submit sub-btn"
                 id="submit-btn"
+                type="submit"
               >
                 Submit
-              </div>
+              </button>
             </div>
             <!-- below div ends step-2 -->
           </div>
@@ -465,7 +470,7 @@
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/firebase/9.15.0/firebase.js"></script> -->
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
-    <script src="./forms.js"></script>
+
     <script src="./bundle.js"></script>
   </body>
 </html>
