updated stock data api

--- a/createaccount/corporate.html
+++ b/createaccount/corporate.html
@@ -24,7 +24,7 @@
     <div class="container form-wrapper">
       <form id="corporate-account" class="create-info-wrapper">
         <div class="step step-1 active">
-          <div class="account-toprow form-group mb-4">
+          <!-- <div class="account-toprow form-group mb-4">
             <div class="row">
               <div class="col-lg-6">
                 <input
@@ -45,7 +45,7 @@
               </div>
               <button class="btn val-btn col-lg-4">Validate</button>
             </div>
-          </div>
+          </div> -->
 
           <div class="page page1">
             <div class="field-wrapper row row-1">
