--- a/createaccount/estate.html
+++ b/createaccount/estate.html
@@ -25,7 +25,7 @@
       <form id="estate-account" class="create-info-wrapper">
         <div class="step step-1 active">
           <h3>CLIENT DATA FORM</h3>
-          <div class="account-toprow form-group mb-4">
+          <!-- <div class="account-toprow form-group mb-4">
             <div class="row">
               <div class="col-lg-6">
                 <input
@@ -46,7 +46,7 @@
               </div>
               <button class="btn val-btn col-lg-4">Validate</button>
             </div>
-          </div>
+          </div> -->
           <div class="page page1">
             <div class="field-wrapper row row-1">
               <!-- this is used to help with the placement of fields -->
